fixed menu gap on mobile view

--- a/assets/css/templatemo-training-studio.css
+++ b/assets/css/templatemo-training-studio.css
@@ -527,7 +527,7 @@ header
     color: #fff!important;
   }
   .header-area.header-sticky .nav {
-    margin-top: 80px !important;
+    margin-top: 1rem !important;
   }
   .header-area .main-nav .nav li {
     width: 100%;
